change body and text to index.html file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>Chris Shikami</head>
-<body>first paragraph</body>
+<head>
+<title>Chris Shikami</title>
+</head>
+<body><h1>first paragraph</h1></body>
 
 </html>
 
