change body and text to index.html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
 <title>Chris Shikami</title>
 </head>
-<body><h1>first paragraph</h1></body>
+<body><h1>Chris Shikami</h1>
+<p>Computer Science Master's Candidate at DePaul University</p>
+<p>Specializing in Mobile Development for iOS and Android</p>
+<p>Github:<a> https://github.com/cshikami</a></p>
+<p>LinkedIn:<a> www.linkedin.com/in/cshikami</a></p>
+<p>email: cshikami@gmail.com</p>
+
+</body>
 
 </html>
 
