change body and text to index.html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>Computer Science Master's Candidate at DePaul University</p>
 <p>Specializing in Mobile Development for iOS and Android</p>
 <p><a href="https://github.com/cshikami">GitHub Profile</a></p>
-<p><a href="www.linkedin.com/in/cshikami">LinkedIn Profile</a></p>
+<p><a href="https://www.linkedin.com/in/cshikami/">LinkedIn Profile</a></p>
 <p>email: cshikami@gmail.com</p>
 
 </body>
