--- a/index.html
+++ b/index.html
@@ -1,16 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Chris Shikami</title>
+  <meta charset="UTF-8">
+  <title>Chris Shikami</title>
+  <meta name="description" content="Chris Shikami is a Chicago-area musician and master's student in Computer Science">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+  <style>
+    /*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
+  </style>
+
+  <style>
+    body {
+      font-family: Candara,Calibri,Segoe,Segoe UI,Optima,Arial,sans-serif;
+      font-size: 16px;
+      max-width: 55em;
+      padding: 0 2em;
+      margin: 0 auto;
+      line-height: 1.125;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    h2 {
+      font-size: 1.75em;
+      font-weight: 400;
+      max-width: 22em;
+    }
+    h3 {
+      font-size: 1.667em;
+      font-weight: 400;
+    }
+    a {
+      white-space: nowrap;
+    }
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
+      h3 {
+        font-size: 1em;
+      }
+    }
+    @media (max-width: 640px) {
+      body {
+        padding: 0 1em;
+      }
+      h1 {
+        font-size: 2em;
+      }
+      h2 {
+        font-size: 1.125em;
+      }
+      a {
+        white-space: normal;
+      }
+    }
+  </style>
 </head>
-<body><h1>Chris Shikami</h1>
-<p>Computer Science Master's Candidate at DePaul University</p>
-<p>Specializing in Mobile Development for iOS and Android</p>
-<p><a href="https://github.com/cshikami">GitHub Profile</a></p>
-<p><a href="https://www.linkedin.com/in/cshikami/">LinkedIn Profile</a></p>
-<p>email: cshikami@gmail.com</p>
+<body itemscope itemtype="http://schema.org/Person">
 
+	<div itemprop="description">
+		<h1>
+			<span itemprop="name">Chris Shikami</span> is a Computer Science Master's Candidate at DePaul University focusing on Mobile Development for iOS and Android.
+		</h1>
+
+		<h2>He is also the drummer for the band <a href="https://www.facebook.com/courtshipband/" target="_blank">Courtship</a> and has previously played with <a href="https://camelheavy.bandcamp.com/releases" target="_blank">Camel Heavy</a> and toured nationwide with <a href="https://www.facebook.com/shadowgraphs/" target="_blank">Shadowgraphs</a>.
+		</h2>
+	</div>
+
+	<h3>Github: <a href="https://github.com/cshikami">cshikami</a></h3>
+	<h3>LinkedIn: <a href="https://www.linkedin.com/in/cshikami/">LinkedIn</a></h3>
+	<h3>email: cshikami@gmail.com</h3>
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-105066419-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
-
 </html>
 
