--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 		</h2>
 	</div>
 
-	<h3>Github: <a href="https://github.com/cshikami">cshikami</a></h3>
-	<h3>LinkedIn: <a href="https://www.linkedin.com/in/cshikami/">LinkedIn</a></h3>
+	<h3>Github: <a href="https://github.com/cshikami" target="_blank">cshikami</a></h3>
+	<h3>LinkedIn: <a href="https://www.linkedin.com/in/cshikami/" target="_blank">LinkedIn</a></h3>
 	<h3>email: cshikami@gmail.com</h3>
 </body>
 </html>
