Fix behance portfolio link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 	<h3>Github: <a href="https://github.com/cshikami" target="_blank">cshikami</a></h3>
 	<h3>LinkedIn: <a href="https://www.linkedin.com/in/cshikami/" target="_blank">LinkedIn</a></h3>
-	<h3>Behance: <a href="https://www.behance.net/shikami" target="_blank">Behance</a></h3>
+	<h3>Behance: <a href="https://www.behance.net/shikami" target="_blank">Behance Graphic Design Portfolio</a></h3>
 	<h3>email: cshikami@gmail.com</h3>
 </body>
 </html>
