Update personal description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chris Shikami</title>
-  <meta name="description" content="Chris Shikami is a Chicago-area musician and master's student in Computer Science">
+  <meta name="description" content="Chris Shikami is a Software Engineer based in Milwaukee, Wisconsin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -75,16 +75,12 @@
 
 	<div itemprop="description">
 		<h1>
-			<span itemprop="name">Chris Shikami</span> is a Computer Science Master's Candidate at DePaul University focusing on Mobile Development for iOS and Android.
+			<span itemprop="name">Chris Shikami</span> is a software engineer based in Milwaukee, Wisconsin.
 		</h1>
-
-		<h2>He is also the drummer for the band <a href="https://www.facebook.com/courtshipband/" target="_blank">Courtship</a> and has previously played with <a href="https://camelheavy.bandcamp.com/releases" target="_blank">Camel Heavy</a> and toured nationwide with <a href="https://www.facebook.com/shadowgraphs/" target="_blank">Shadowgraphs</a>.
-		</h2>
 	</div>
 
 	<h3>Github: <a href="https://github.com/cshikami" target="_blank">cshikami</a></h3>
 	<h3>LinkedIn: <a href="https://www.linkedin.com/in/cshikami/" target="_blank">LinkedIn</a></h3>
-	<h3>Behance: <a href="https://www.behance.net/shikami" target="_blank">Behance Graphic Design Portfolio</a></h3>
 	<h3>email: cshikami@gmail.com</h3>
 </body>
 </html>
