--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <style>
     body {
-      font-family: Candara,Calibri,Segoe,Segoe UI,Optima,Arial,sans-serif;
+      font-family: sans-serif, Arial,Candara,Calibri,Segoe,Segoe UI,Optima;
       font-size: 16px;
       max-width: 55em;
       padding: 0 2em;
