feature/update-bio: Update location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chris Shikami</title>
-  <meta name="description" content="Chris Shikami is a Software Engineer based in Milwaukee, Wisconsin">
+  <meta name="description" content="Chris Shikami is a Software Engineer based in New York">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -75,7 +75,7 @@
 
 	<div itemprop="description">
 		<h1>
-			<span itemprop="name">Chris Shikami</span> is a software engineer based in Milwaukee, Wisconsin.
+			<span itemprop="name">Chris Shikami</span> is a software engineer based in New York.
 		</h1>
 	</div>
 
@@ -84,4 +84,3 @@
 	<h3>email: cshikami@gmail.com</h3>
 </body>
 </html>
-
